operator/pkg/gateway-api/testdata/gateway/hostnetwork-internal-ip-fallback/input/hostnetwork-internal-ip-fallback.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-conformance-infra-test
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: v1
kind: Node
metadata:
  name: node-1
status:
  addresses:
    - type: InternalIP
      address: "10.0.0.1"
---
apiVersion: v1
kind: Node
metadata:
  name: node-2
status:
  addresses:
    - type: InternalIP
      address: "10.0.0.2"
